--- a/docroot/themes/custom/site/src/styles/custom-vendor/layout/elements/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/custom-vendor/layout/elements/_loader.scss
@@ -1,7 +1,7 @@
-@import 'responsive';
-@import 'navigation';
-@import 'obfuscator';
+@import "responsive";
+@import "navigation";
+//@import "obfuscator";
 
-@import 'title';
-@import 'spacer';
-@import 'drawer-button';
+@import "title";
+@import "spacer";
+@import "drawer-button";
