--- a/docroot/themes/custom/site/src/styles/custom-vendor/layout/layout.scss
+++ b/docroot/themes/custom/site/src/styles/custom-vendor/layout/layout.scss
@@ -1,9 +1,9 @@
-@import 'variables/default';
-@import 'mixins';
+@import "variables/default";
+@import "mixins";
 
-@import 'page-layout';
-@import 'header';
-@import 'drawer';
+@import "page-layout";
+@import "header";
+//@import "drawer";
 
 // Elements
-@import 'elements/loader';
+@import "elements/loader";
