--- a/docroot/themes/custom/site/src/styles/theme/components/_loader.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_loader.scss
@@ -3,6 +3,7 @@
 @import "boxy/loader";
 
 @import "page-layout";
+@import "misc";
 @import "modal";
 @import "photoswipe-gallery";
 @import "banner";
