--- a/docroot/themes/custom/site/src/styles/custom-vendor/layout/elements/_navigation.scss
+++ b/docroot/themes/custom/site/src/styles/custom-vendor/layout/elements/_navigation.scss
@@ -11,8 +11,6 @@
 // --------------------------------------------------
 
 .layout-navigation {
-  display: flex;
-  flex-wrap: nowrap;
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -44,11 +42,6 @@
     padding: 0;
     text-align: center;
   }
-}
-
-.layout-navigation__dropdown {
-  display: flex;
-  flex-direction: column;
 }
 
 .layout-navigation__dropdown-menu {
@@ -124,6 +117,34 @@
   .layout-navigation--hidden-desktop-and-down & {
     @include layout-media-breakpoint-and-down(desktop) {
       @include layout-invisibility();
+    }
+  }
+}
+
+// --------------------------------------------------
+// Responsive
+// --------------------------------------------------
+
+.flexbox {
+
+  .layout-navigation {
+    display: flex;
+    flex-wrap: nowrap;
+  }
+
+  .layout-navigation__dropdown {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.no-flexbox {
+
+  .layout-navigation {
+    display: table;
+
+    > li {
+      display: table-cell;
     }
   }
 }
