--- a/docroot/themes/custom/site/src/styles/stylesheet.scss
+++ b/docroot/themes/custom/site/src/styles/stylesheet.scss
@@ -5,4 +5,7 @@
 // Drupal 8 specific overrides (load from Bootstrap theme in themes/contrib/bootstrap)
 @import "../../../../contrib/bootstrap/starterkits/sass/scss/overrides";
 
+// IE 9
+@import "ie9";
+
 @import "theme/loader";
