VI-202 Event email templates and display

--- a/docroot/themes/custom/site/templates/node/teaser/node--vih-event-order--email-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/node--vih-event-order--email-teaser.html.twig
@@ -1,27 +1,20 @@
-<div>
-  <div>
-    <div>
-      {{ content.field_vih_eo_event }}
-    </div>
-    {% if node.field_vih_eo_persons.value %}
-      <div>
-        <h2>
-          {{ 'Participants' | trans }}
-        </h2>
-        {{ content.field_vih_eo_persons }}
-      </div>
-    {% endif %}
-  </div>
-  <div>
-    {% if content.field_vih_eo_price %}
-      <!-- Begin - price -->
-      <div>
-        <h2>{{ "Total price" | trans }}</h2>
-        {{ content.field_vih_eo_price }}
-      </div>
-    {% endif %}
-  </div>
-</div>
+<h2>
+  {{ content.field_vih_eo_event.0}}
+</h2>
+{% if node.field_vih_eo_persons.value %}
+  <h3>
+    {{ 'Participants' | trans }}
+  </h3>
+  {{ content.field_vih_eo_persons }}
+{% endif %}
+{% if content.field_vih_eo_price %}
+  <hr>  
+  <h3>
+    {{ "Total price" | trans }}
+  </h3>
+  <b>{{ content.field_vih_eo_price }}</b>
+  <br>
+{% endif %}
 
 
 
