--- a/docroot/themes/custom/site/src/styles/_ie9.scss
+++ b/docroot/themes/custom/site/src/styles/_ie9.scss
@@ -16,4 +16,19 @@
   & .vih-suboptions-container.form-group{
     display: block !important;
   }
+  & .vih-suboptions-container fieldset.fieldgroup.form-composite.form-item.form-wrapper legend span.fieldset-legend{
+    display: block;  
+    font-size: 14px;
+  }
+}
+
+/*IE9 fixes revert for other browsers*/
+label[for="edit-newparticipantcontainer-newparticipantfieldset-firstname"],
+label[for="edit-newparticipantcontainer-newparticipantfieldset-lastname"],
+label[for="edit-newparticipantcontainer-newparticipantfieldset-cpr"],
+label[for="edit-newparticipantcontainer-newparticipantfieldset-email"]{
+  display: none;
+}
+.vih-suboptions-container fieldset.fieldgroup.form-composite.form-item.form-wrapper legend span.fieldset-legend{
+  display: none;  
 }
