--- a/docroot/themes/custom/site/src/styles/_ie9.scss
+++ b/docroot/themes/custom/site/src/styles/_ie9.scss
@@ -15,7 +15,29 @@
   & label[for="edit-newparticipantcontainer-newparticipantfieldset-firstname"],
   & label[for="edit-newparticipantcontainer-newparticipantfieldset-lastname"],
   & label[for="edit-newparticipantcontainer-newparticipantfieldset-cpr"],
-  & label[for="edit-newparticipantcontainer-newparticipantfieldset-email"]{
+  & label[for="edit-newparticipantcontainer-newparticipantfieldset-email"], 
+  & label[for="edit-firstname"],
+  & label[for="edit-lastname"],
+  & label[for="edit-cpr"],
+  & label[for="edit-telefon"],
+  & label[for="edit-email"],
+  & label[for="edit-address"],
+  & label[for="edit-housenumber"],
+  & label[for="edit-houseletter"],
+  & label[for="edit-housefloor"],
+  & label[for="edit-city"],
+  & label[for="edit-zip"],
+  & label[for="edit-adultfirstname"],
+  & label[for="edit-adultlastname"],
+  & label[for="edit-adulttelefon"],
+  & label[for="edit-adultemail"],
+  & label[for="edit-message"],
+  & label[for="edit-adultaddress"],
+  & label[for="edit-adulthousenumber"],
+  & label[for="edit-adulthouseletter"],
+  & label[for="edit-adulthousefloor"],
+  & label[for="edit-adultcity"],
+  & label[for="edit-adultzip"] {
     display: block;
   }
   & .vih-suboptions-container.form-group{
@@ -28,13 +50,50 @@
   & #participants-container-wrapper div[data-drupal-selector="edit-participantscontainer"] label{
     display: block;
   }
+
+  .partial.partial--form {
+    & .form-item-nationality, 
+    & .form-item-education, 
+    & .form-item-payment, 
+    & .form-item-foundfrom, 
+    & .form-item-adultnationality{
+      & .select-wrapper{
+        &:after{
+          display: none;
+        }
+      }
+    }
+  }
 }
 
 /*IE9 fixes revert for other browsers*/
 label[for="edit-newparticipantcontainer-newparticipantfieldset-firstname"],
 label[for="edit-newparticipantcontainer-newparticipantfieldset-lastname"],
 label[for="edit-newparticipantcontainer-newparticipantfieldset-cpr"],
-label[for="edit-newparticipantcontainer-newparticipantfieldset-email"]{
+label[for="edit-firstname"],
+label[for="edit-newparticipantcontainer-newparticipantfieldset-email"], 
+label[for="edit-firstname"],
+label[for="edit-lastname"],
+label[for="edit-cpr"],
+label[for="edit-telefon"],
+label[for="edit-email"],
+label[for="edit-address"],
+label[for="edit-housenumber"],
+label[for="edit-houseletter"],
+label[for="edit-housefloor"],
+label[for="edit-city"],
+label[for="edit-zip"],
+label[for="edit-adultfirstname"],
+label[for="edit-adultlastname"],
+label[for="edit-adulttelefon"],
+label[for="edit-adultemail"],
+label[for="edit-message"],
+label[for="edit-adultaddress"],
+label[for="edit-adulthousenumber"],
+label[for="edit-adulthouseletter"],
+label[for="edit-adulthousefloor"],
+label[for="edit-adultcity"],
+label[for="edit-adultzip"] {
   display: none;
 }
 .vih-suboptions-container fieldset.fieldgroup.form-composite.form-item.form-wrapper legend span.fieldset-legend{
