--- a/docroot/themes/custom/site/src/styles/theme/components/_navigation.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/_navigation.scss
@@ -38,6 +38,16 @@ $navigation-bottom-border-color: #fff;
 .layout-navigation.layout-navigation--full-width.layout--large-screen-only{
   position: relative;
 }
+
+.layout-navigation__dropdown-menu {
+
+  .layout-navigation__link {
+    height: auto;
+
+    flex-grow: 0;
+  }
+}
+
 // --------------------------------------------------
 // Variants
 // --------------------------------------------------
