--- a/docroot/themes/custom/site/templates/taxonomy-term/list-advanced/taxonomy-term--vih-class--list-advanced.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/list-advanced/taxonomy-term--vih-class--list-advanced.html.twig
@@ -30,9 +30,9 @@
         </div>
         {# End - name #}
 
-        {# Begin - description #}
-        {{ content.description | render | striptags('<!-- -->') }}
-        {# End - description #}
+        {# Begin - short description #}
+        {{ content.field_short_description }}
+        {# End - short description #}
 
     </div>
     <!-- End - body -->
