--- a/docroot/themes/custom/site/templates/taxonomy-term/radio-selection/taxonomy-term--vih-class--radio-selection.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/radio-selection/taxonomy-term--vih-class--radio-selection.html.twig
@@ -15,13 +15,13 @@
 <!-- Begin - body -->
 <div class="entity-list-advanced__body">
 
-    {# Begin - description #}
+    {# Begin - short description #}
     <div class="entity-list-advanced__heading">
         <h2 class="entity-list-advanced__heading__title heading-h4">
-            {{ content['description'] }}
+            {{ content.field_short_description }}
         </h2>
     </div>
-    {# End - description #}
+    {# End - short description #}
 
 </div>
 <!-- End - body -->
