--- a/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--vih-class-table-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/taxonomy-term/teaser/taxonomy-term--vih-class--vih-class-table-teaser.html.twig
@@ -1,30 +1,3 @@
-{#
-/**
- * @file
- * Default theme implementation to display a taxonomy term.
- *
- * Available variables:
- * - url: URL of the current term.
- * - name: Name of the current term.
- * - content: Items for the content of the term (fields and description).
- *   Use 'content' to print them all, or print a subset such as
- *   'content.description'. Use the following code to exclude the
- *   printing of a given child element:
- *   @code
- *   {{ content|without('description') }}
- *   @endcode
- * - attributes: HTML attributes for the wrapper.
- * - page: Flag for the full page state.
- * - term: The taxonomy term entity, including:
- *   - id: The ID of the taxonomy term.
- *   - bundle: Machine name of the current vocabulary.
- * - view_mode: View mode, e.g. 'full', 'teaser', etc.
- *
- * @see template_preprocess_taxonomy_term()
- *
- * @ingroup themeable
- */
-#}
 <div{{ attributes }}>
     <table class="row">
         <tr class="modal-course-content-teaser-wrapper">
@@ -32,31 +5,19 @@
                 {{ content.field_vih_class_image }}
             </td>
             <td class="col-xs-6 multiple-elements">
-                {% if content.description|render is not empty %}
-                    <div class="field-vih-image-wrapper">{{ content.description }}</div>
+
+                {# Begin - short description #}
+                {% if node.field_short_description.value %}
+                    <div class="field-vih-image-wrapper">
+                        {{ content.field_short_description }}
+                    </div>
                 {% endif %}
+                {# End - short description #}
+
                 <a href="{{ url }}" class="btn-more">
                     <span class="icon icon-info-circle" aria-hidden="true"></span>
                 </a>
             </td>
-            {#   #}
         </tr>
     </table>
 </div>
-{#{{ title_prefix }}#}
-    {#{% if not page %}#}
-        {#<h2><a href="{{ url }}">{{ name }}</a></h2>#}
-    {#{% endif %}#}
-    {#{{ title_suffix }}#}
-
-{#    <div class="row">
-        <div class="col-xs-6">
-            {{ content.field_vih_class_image }}
-        </div>
-        <div class="col-xs-6 vih-col-center">
-           {% if content.description|render is not empty %}
-    <div class="field-vih-image-wrapper">{{ content.description }}</div>
-  {% endif %}
-        </div>
-    </div>
-</div>#}
