VI-202 emails fix

--- a/docroot/themes/custom/site/templates/node/teaser/node--vih-long-course-order--email-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/node--vih-long-course-order--email-teaser.html.twig
@@ -34,7 +34,7 @@
     <td row="3" style="width:20px;"></td>
     <td row="3" style="width:20px; border-left: 1px solid #000;"></td>
     <td style="vertical-align: top;">
-      <h3>{{ 'Adult' | trans }}</h3>   
+      <h3>{{ 'Contact person' | trans }}</h3>   
       <b>{{ 'Name' | trans }}:</b><br>
       {{ node.field_vih_lco_adult_first_name.value }} {{ node.field_vih_lco_adult_last_name.value }}
       <p>
