--- a/docroot/themes/custom/site/templates/node/teaser/paragraph--vih-ordered-course-slot--email-teaser.html.twig
+++ b/docroot/themes/custom/site/templates/node/teaser/paragraph--vih-ordered-course-slot--email-teaser.html.twig
@@ -39,13 +39,6 @@
  */
 #}
 
-<ul>
-  <li>
-    {{ paragraph.field_vih_ocs_title.value }}
-  </li>
-  <ul>
-    <li>
-      {{ content.field_vih_ocs_class }}
-    </li>
-  </ul>
-</ul>
+<div>
+    {{ paragraph.field_vih_ocs_title.value }} {{ content.field_vih_ocs_class }}
+</div>
