--- a/docroot/themes/custom/site/templates/node/full/node--event.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--event.html.twig
@@ -127,7 +127,7 @@ view_mode ? view_mode|clean_class,
                         <div class="partial__body">
                             <a href="{{ url('vih_subscription.event_order_create', {'event': node.id}) }}"
                                class="btn btn-primary">
-                                {{ "Start now" | trans }}
+                                {{ "Register now" | trans }}
                             </a>
                         </div>
                     </div>
