--- a/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
+++ b/docroot/themes/custom/site/templates/node/full/node--vih-long-cource.html.twig
@@ -201,7 +201,7 @@ view_mode ? view_mode|clean_class,
                         <div class="partial__body">
                             <a href="{{ url('vih_subscription.long_course_order_create', {'course': node.id}) }}"
                                class="btn btn-primary">
-                                {{ "Start now" | trans }}
+                                {{ "Join course and choose your subjects" | trans }}
                             </a>
                         </div>
                     </div>
