--- a/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_class-description.scss
+++ b/docroot/themes/custom/site/src/styles/theme/entity/paragraph/type/_class-description.scss
@@ -89,7 +89,7 @@ $lg-paragraph-action-heading-margin-bottom: 20px;
       margin-bottom: $sm-paragraph-action-heading-margin-bottom;
     }
 
-    .field--name-field-vih-photo {
+    .photo {
       margin-right: 0 - floor( ( $grid-gutter-width / 2 ) );
     }
   }
