--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-confirmation-page.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-confirmation-page.html.twig
@@ -4,7 +4,7 @@
 
             <!-- Begin - heading -->
             <div class="sectioned__heading">
-                <h1 class="sectioned__heading__title">{{ 'Please confirm your order' | trans }}</h1>
+                <h1 class="sectioned__heading__title">{{ 'Please confirm your registration' | trans }}</h1>
             </div>
             <!-- End - heading -->
 
@@ -15,15 +15,15 @@
             <!-- Begin - buttons -->
             <div class="partial partial--actions">
                 <div class="partial__body">
+                    <div class="text-right">
+                        <a href="{{ page['#backLink'] }}" class="btn btn-default">
+                            {{ 'Back to order' | trans }}
+                        </a>
 
-                    <a href="{{ page['#backLink'] }}" class="btn btn-default">
-                        {{ 'Back to order' | trans }}
-                    </a>
-
-                    <a href="{{ page['#paymentLink'] }}" class="btn btn-success">
-                        {{ 'Proceed to payment' | trans }}
-                    </a>
-
+                        <a href="{{ page['#paymentLink'] }}" class="btn btn-success">
+                            {{ 'Proceed to payment' | trans }}
+                        </a>
+                    </div>
                 </div>
             </div>
             <!-- End - buttons -->
