--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-event-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-event-order-form.html.twig
@@ -16,7 +16,7 @@
                 <div class="partial__body">
                     <p>{{ "You can sign up, as many as you'd like. You will add one person at a time in the form below."|t }}</p>
 
-                    <a href="{{ form['#event']['url'] }}" class="btn btn-default btn-sm">
+                    <a href="{{ form['#event']['url'] }}" class="btn btn-default">
                         {{ "Back to event" | trans }}
                     </a>
                 </div>
