--- a/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
+++ b/docroot/modules/custom/vih_subscription/templates/vih-subscription-short-course-order-form.html.twig
@@ -75,18 +75,26 @@
                     </div>
                     <!-- End - participants -->
 
-                    <div class="text-right">
-                        {{ form['actions'] }}
+                    <!-- Begin - form controls -->
+                    <div class="partial partial--form-controls">
+                        <div class="partial__body">
+                            {{ form['actions'] }}
+                        </div>
                     </div>
+                    <!-- End - form controls -->
 
                 </div>
             </div>
 
             <hr>
 
-            <div class="text-right">
-                {{ form['actions'] }}
+            <!-- Begin - form controls -->
+            <div class="partial partial--form-controls">
+                <div class="partial__body">
+                    {{ form['actions'] }}
+                </div>
             </div>
+            <!-- End - form controls -->
 
         </div>
     </div>
