--- a/docroot/themes/custom/site/src/styles/theme/components/partial/_form-controls.scss
+++ b/docroot/themes/custom/site/src/styles/theme/components/partial/_form-controls.scss
@@ -1,9 +1,9 @@
 // |--------------------------------------------------------------------------
-// | Form
+// | Form controls
 // |--------------------------------------------------------------------------
 // |
 // | This file contains styles for the following:
-// | - .partial--form
+// | - .partial--form-controls
 // |
 
 // --------------------------------------------------
@@ -20,7 +20,12 @@
 // Styling
 // --------------------------------------------------
 
-.partial--form {}
+.partial--form-controls {
+
+  .partial__body {
+    text-align: right;
+  }
+}
 
 // --------------------------------------------------
 // Variants
